Fixed "previous" and "next" buttons to be in the button on mobile.

--- a/css/projects/69-love-songs/main.css
+++ b/css/projects/69-love-songs/main.css
@@ -176,11 +176,10 @@ a:hover {
   border: none;
   color: white;
   font-size: 28px;
-}
-
-#lyrics-content button:hover {
-  background-color: rgba(0,0,0,.5);
   cursor: pointer;
+}
+#lyrics-content button:hover {
+  background-color: rgba(192,192,192,0.3);
 }
 
 /* For screens that are 768px wide or less */
@@ -197,16 +196,24 @@ a:hover {
     width: 100%;
   }
   #lyrics-content {
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 15px;
     text-align: center;
     grid-template-areas:
-            "prev home next"
-            "song song song";
+      "song song song"
+      "prev home next";
   }
   #shell {
-    margin: 0 auto;
+    margin: 0 auto 50px;
     width: 450px;
+  }
+  #lyrics-content button {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  #lyrics-content button:hover {
+    background-color: rgba(192,192,192,0.3);
   }
   #home {
     display: grid;
